force-app/main/default/objects/ProdSaleItemDetail__c/ProdSaleItemDetail__c.object-meta.xml
<CustomObject>
    <label>Prod Sale Item Detail</label>
    <nameField>
        <displayFormat>PSID-{00000000}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prod Sale Item Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>