force-app/main/default/objects/ProdSaleItemDetail__c/fields/ItemDetailName__c.field-meta.xml
<CustomField>
    <fullName>ItemDetailName__c</fullName>
    <formula>ProdTechRefDetails__r.ProdTechRef__r.Object__c +&apos;: &apos;+ ProdTechRefDetails__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Detail Name</label>
    <type>Text</type>
</CustomField>