force-app/main/default/objects/ProdSaleItemDetail__c/fields/ProdSaleItem__c.field-meta.xml
<CustomField>
    <fullName>ProdSaleItem__c</fullName>
    <label>Prod Sale Item</label>
    <referenceTo>ProdSaleItem__c</referenceTo>
    <relationshipLabel>Prod Sale Item Details</relationshipLabel>
    <relationshipName>Prod_Sale_Item_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>