force-app/main/default/objects/ProdSaleItemDetail__c/fields/ProdTechRefDetails__c.field-meta.xml
<CustomField>
    <fullName>ProdTechRefDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Tech Ref Details</label>
    <referenceTo>ProdTechRefDetails__c</referenceTo>
    <relationshipLabel>Prod Sale Item Details</relationshipLabel>
    <relationshipName>Prod_Sale_Item_Details</relationshipName>
    <type>Lookup</type>
</CustomField>